# Bethly

backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py  scrapers.py
backend/testing/: amazon_test.py
frontend/src/: App.css  App.jsx
frontend/src/GroupPicker/: GroupPicker.css  GroupPicker.jsx
frontend/src/Item/: ItemRow.css  ItemRow.jsx  ItemTable.css  ItemTable.jsx
