[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "fastapi[all]>=0.116.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "selenium>=4.35.0",
    "uvicorn[standard]>=0.35.0",
    "webdriver-manager>=4.0.2",
]
